# gamelibs-libvorbis

./: Makefile  meson.build
include/vorbis/: vorbisfile.h
lib/: os.h  vorbisfile.c
win32/msvc/: libogg.props
win32/msvc/libvorbis/: libvorbis_static.vcxproj
win32/msvc/libvorbisfile/: libvorbisfile_static.vcxproj
